feat: finishes short introduction to bo

--- a/notebooks/3.1-bayesian-opt-explain.md
+++ b/notebooks/3.1-bayesian-opt-explain.md
@@ -18,6 +18,8 @@ For further information, we recommend the following resources:
 
 ---
 
+## The need for hyperparameter optimization
+
 A **hyperparameter** is a parameter that characterizes a machine learning model. For example, in CatBoost, it could be the number of iterations, while in logistic regression, it could be the regularization factor. Although modern libraries often provide satisfactory default values, exploring other configurations is essential to optimize model performance. Hyperparameter tuning is therefore a central and recurring challenge in machine learning. However, this process is often perceived as "opaque" because it lacks systematic methods and heavily depends on experience and empirical rules [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944).
 
 Two common methods are used to select hyperparameters:
@@ -25,9 +27,9 @@ Two common methods are used to select hyperparameters:
 1. **Grid search**: This method involves defining fixed, discrete sets for each hyperparameter to explore, then training a model for every possible combination. For example, to optimize the learning rate and tree depth, the search space might be defined as:  
    `learning_rate ∈ [0.001, 0.004, 0.007, 0.009, 0.01]` and `tree_depth ∈ [2, 4, 8, 12, 14]`, yielding `5 × 5 = 25` combinations. Each combination is tested, and the one yielding the best performance on the test data is chosen. This approach is simple to implement but has a major drawback: its high computational cost, since all combinations must be evaluated, including very similar or poorly performing ones.
 
-2. **Random search**: This method involves sampling a fixed number of combinations from defined probability distributions for each hyperparameter, instead of systematically exploring all combinations. For example, the learning rate could be sampled from `Uniform(0.001, 0.01)` and tree depth from a discrete uniform distribution `Uniform_discrete(2, 14)`, generating, for instance, 15 combinations to test. This method is also easy to implement, usually less costly than grid search, and allows more efficient exploration of large search spaces. However, since sampling is random and independent of previously observed performance, it may repeatedly test poorly performing regions of the search space.
+2. **Random search**: This method involves sampling a fixed number of combinations from defined probability distributions for each hyperparameter, instead of systematically exploring all combinations. For example, the learning rate could be sampled from $\mathcal{U}(0.001, 0.01)$ and tree depth from a discrete uniform distribution $\mathcal{U}_{\texttt{discrete}}(2, 14)$, generating, for instance, 15 combinations to test. This method is also easy to implement, usually less costly than grid search, and allows more efficient exploration of large search spaces. However, since sampling is random and independent of previously observed performance, it may repeatedly test poorly performing regions of the search space.
 
-Both of these hyperparameter optimization methods are popular and widely used. However, they share a common limitation: the information from previously evaluated combinations does not influence the choice of future trials. Intuitively, if certain regions of the hyperparameter space prove promising, it would make sense to explore them further. Conversely, repeatedly evaluating regions with low past performance is inefficient.
+Both of these hyperparameter optimization methods are popular and widely used. However, they share a common limitation: the information from previously evaluated combinations does not influence the choice of future trials. Intuitively, if certain regions of the hyperparameter space have provided promising results, it would make sense to explore them further. Conversely, repeatedly evaluating regions with low past performance is inefficient.
 
 **Bayesian optimization** addresses this limitation. This approach iteratively searches for an optimized combination of hyperparameters using an **acquisition function**, which balances the trade-off between exploitation and exploration. Exploitation favors new combinations near those that have yielded good results, while exploration tests regions of the hyperparameter space that are less or not yet evaluated [\(Watanabe, 2023\)](https://arxiv.org/abs/2304.11127).
 
@@ -35,18 +37,18 @@ The figure below illustrates the impact of different hyperparameter search strat
 
 - **Red points** represent combinations sampled by grid search. This method covers the space regularly but leads to many trials in poorly performing areas, even when neighboring points have shown unsatisfactory results.
 - **Blue points** correspond to random search. It explores various parts of the space, sometimes finding points near the minimum. However, many trials are also conducted in poorly performing regions, reducing overall efficiency.
-- **Yellow points** illustrate Bayesian optimization. This method starts with a global exploration to quickly identify the high-performance region. Sampling then concentrates around this area, explaining the high density of points near the global minimum. Bayesian optimization thus maximizes trials in promising areas while limiting unnecessary evaluations elsewhere.
+- **Yellow points** illustrate Bayesian optimization. This method starts with a global exploration to quickly identify the high-performance region. Sampling then concentrates around this area, explaining the high density of points near the global minimum. Bayesian optimization thus favours trials in promising areas while limiting unnecessary evaluations elsewhere.
 
 ![Hyperparameter tuning strategies](../assets/b_opt/hyperparam_tuning_examples.png)  
 *Figure 1: Illustration of hyperparameter tuning strategies. Dark blue areas indicate low RMSE, yellow areas indicate high RMSE.*
 
 ## How Bayesian Optimization Works
 
-To achieve its goal, Bayesian optimization builds a probabilistic model of $f(\mathbf{x})$, the function to optimize. This function takes its inputs from the set $\mathcal{X} \subset \mathbb{R}^D$. At each iteration, the probabilistic model of $f(\mathbf{x})$ guides the search in $\mathcal{X}$, taking into account both the performance of previous iterations and regions of the search space with more or less uncertainty [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944).
+To achieve its goal, Bayesian optimization builds a probabilistic model of $f(\mathbf{x})$, the function to optimize. This function takes its inputs from a set $\mathcal{X} \subset \mathbb{R}^D$. At each iteration, the probabilistic model of $f(\mathbf{x})$ guides the search in $\mathcal{X}$, taking into account both the performance of previous iterations and regions of the search space with more or less uncertainty [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944).
 
 Bayesian optimization relies on two main choices [\(Snoek et al., 2012\)](https://arxiv.org/abs/1206.2944): selecting a **surrogate model** to approximate the function to optimize and choosing an **acquisition function** $\alpha(\mathbf{x})$ to determine the next point to evaluate. **Gaussian processes** are frequently used as surrogate models due to their flexibility and ease of use, with a specified prior over $f(\mathbf{x})$.
 
-The Python library used in this workshop (Optuna) [\(Akiba et al., 2019\)](http://arxiv.org/abs/1907.10902) relies on the *Tree-Structured Parzen Estimator* algorithm as its surrogate model. However, this algorithm is not detailed here; for more information, the reader may refer to [\(Watanabe, 2023\)](https://arxiv.org/abs/2304.11127).
+The Python library used in this workshop (Optuna) [\(Akiba et al., 2019\)](http://arxiv.org/abs/1907.10902) relies on the *Tree-Structured Parzen Estimator* algorithm as surrogate model. However, this algorithm is not detailed here; for more information, the reader may refer to [\(Watanabe, 2023\)](https://arxiv.org/abs/2304.11127).
 
 In general, one iteration of Bayesian optimization proceeds as follows [\(Agnihotri & Batra, 2020\)](https://distill.pub/2020/bayesian-optimization):
 
@@ -86,7 +88,7 @@ The next point to evaluate, $x_{t+1}$, is the one that maximizes this probabilit
 
 $$
 x_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha_{PI}(x)
-          = \arg\max_{\mathbf{x} \in \mathcal{X}} \Pr[f(x) \geq \tau]
+          = \arg\max_{\mathbf{x} \in \mathcal{X}} \Pr[f(x) > \tau]
 $$
 
 Assuming a Gaussian process as the surrogate model, the Probability of Improvement can be written as:
@@ -142,6 +144,8 @@ As with Probability of Improvement, the next point to explore is the one that ma
 $$
 x_{t+1} = \arg\max_{\mathbf{x} \in \mathcal{X}} \alpha_{EI}(x)
 $$
+
+These explanations conclude this short introduction to Bayesian Optimization. The key takeaway is that this method balances exploration and exploitation through two main components: a surrogate model and an acquisition function.
 
 ## References
 
